<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!-- ROM Links -->
    <string name="pushbullet">"https://www.pushbullet.com/channel?tag=blissroms"</string>
    <string name="github">"https://github.com/BlissRoms"</string>
    <string name="rom_site">"http://blissroms.com/"</string>
    <string name="googleplus">"https://plus.google.com/u/1/communities/118265887490106132524"</string>

    <string name="debug_link">"http://forum.xda-developers.com/member.php?u=3605033"</string>
    <string name="about_bliss_repo">"https://github.com/chummydevteam/TeamBlissAbout"</string>

    <!-- MainActivity Strings -->
    <string name="app_name">"About Bliss"</string>
    <string name="app_long_name">"About Bliss"</string>
    <string name="package_name">"bliss.about"</string>
    <string name="theme_description">A truly blissful experience.</string>

    <!-- MainActivity Strings -->
    <string name="nicholas">Nicholas Philip Chum</string>
    <string name="nicholas_description">cdt lead themer &amp; team bliss app developer</string>
    <string name="title_libraries">list of implemented library authors</string>
    <string name="list_of_implemeted_libraries">\nMelnykov\nAidan Follestad\nMike Penz\nBalys Valentukevicius</string>
    <string name="license_credit">team bliss would like to thank @jahirfiquitiva for the original app source. \nall licenses used are viewable in the public source and apply to this app.</string>

    <!-- Icon Pack designer/owner e-mail -->
    <string name="email_id">nicholaschum@gmail.com</string>

    <!-- This are the strings for the cards in the main screen -->
    <string name="welcome_title">About Bliss</string>
    <string name="email_request_subject">Welcome to Bliss</string>

    <string name="best_of_show">a plethora of features</string>
    <string name="best_of_show_content">"We offer most of the features available from every ROM out there."</string>

    <string name="capability">capability</string>
    <string name="capability_content">"a one stop shop for all your phone's features! we prefer the rom run without xposed, and believe that all the features you want should be grouped together in an organized fashion!"</string>

    <string name="more_devices">a variety of devices</string>
    <string name="more_devices_contents">"we don't only support one device, we support a whole chunk that cyanogenmod supports that can run the latest software."</string>

    <string name="more_options">more options</string>
    <string name="more_options_content">"we are very lenient on features. if you would like a feature, try and request it from our google+ community."</string>

    <!-- A link to your web page, if you have one -->
    <string name="dev_link">http://forum.xda-developers.com/member.php?u=3605033</string>
    <string name="dev_gplus_link">"https://plus.google.com/u/0/+NicholasChumCDT"</string>

    <!-- List Of Drawer Sections -->
    <string name="section_one">Home</string>
    <string name="section_about">About the App</string>
    <string name="section_developers">Developers</string>
    <string name="section_maintainers">Maintainers</string>
    <string name="section_supported_devices">All Supported Devices</string>

    <!-- About -->
    <string name="about">"About Bliss"</string>
    <string name="app_version">"v6.0.0"</string>

    <string name="web">XDA</string>
    <string name="gplus">GOOGLE+</string>

    <!-- Developer Fragment -->
    <string name="developer_title">Team Bliss Developers</string>

    <string name="patrick">Patrick Graber (pjgraber03)</string>
    <string name="patrick_description">Team Bliss Lead Developer, Gerrit and GitHub Admin</string>
    <string name="patrick_xda">http://forum.xda-developers.com/member.php?u=5346868</string>
    <string name="patrick_gplus">https://plus.google.com/u/1/+PatrickGraberRES-Rom</string>

    <string name="jean">Jean-François Brière (Dark_Eyes_)</string>
    <string name="jean_description">Team Bliss Main Developer</string>
    <string name="jean_xda">http://forum.xda-developers.com/member.php?u=5445418</string>
    <string name="jean_gplus">https://plus.google.com/u/0/108057486717204262079</string>

    <string name="jon">Jon West (electrikjesus)</string>
    <string name="jon_description">Team Bliss Web Developer</string>
    <string name="jon_xda">http://forum.xda-developers.com/member.php?u=928479</string>
    <string name="jon_gplus">https://plus.google.com/u/0/+JonWest</string>

    <string name="nicholas_dev">Nicholas Chum (nicholaschum)</string>
    <string name="nicholas_dev_description">Team Bliss App Developer and Themer</string>
    <string name="nicholas_xda">http://forum.xda-developers.com/member.php?u=3605033</string>
    <string name="nicholas_gplus">https://plus.google.com/u/0/+NicholasChumCDT</string>

    <!-- Maintainer Fragment -->
    <string name="maintainer_title">"Official Maintainers"</string>

    <string name="bito">"http://forum.xda-developers.com/member.php?u=6411851"</string>
    <string name="bito_name">"BitOBSessiOn"</string>
    <string name="bito_devices">"ASUS Zenfone 2\nNVIDIA ShieldTab"</string>
    <string name="zenfone2">"http://forum.xda-developers.com/zenfone2/development/official-bliss-v6-0-zenfone-2-team-bliss-t3285686"</string>
    <string name="shieldtab">"http://forum.xda-developers.com/shield-tablet/development/beta-bliss-v6-0-shield-tablet-team-bliss-t3288806"</string>

    <string name="fizbanrapper">"http://forum.xda-developers.com/member.php?u=5676253"</string>
    <string name="fizbanrapper_name">"fizbanrapper"</string>
    <string name="fizbanrapper_devices">"HTC One M8"</string>
    <string name="pstrang">"http://forum.xda-developers.com/htc-one-m8/development/rom-bliss-stalk-team-bliss-t2913348"</string>
    <string name="pstrang_name">"pstrang"</string>
    <string name="pstrang_devices">"HTC One M8"</string>
    <string name="m8">"http://forum.xda-developers.com/htc-one-m8/development/rom-bliss-stalk-team-bliss-t2913348"</string>

    <string name="dark_eyes_">@string/jean_xda</string>
    <string name="dark_eyes_name">"Dark_Eyes_"</string>
    <string name="dark_eyes_devices">"Nexus 5"</string>
    <string name="hammerhead">"http://forum.xda-developers.com/google-nexus-5/development/rom-t2995181"</string>

    <string name="pjgraber03">@string/patrick_xda</string>
    <string name="pjgraber03_name">"pjgraber03"</string>
    <string name="pjgraber03_devices">"Moto X Pure\nNexus 6\nNexus 7 2013</string>
    <string name="shamu">"http://forum.xda-developers.com/nexus-6/development/rom-blisspop-team-bliss-t3077737"</string>

    <string name="electrikjesus">@string/jon_xda</string>
    <string name="electrikjesus_name">"electrikjesus"</string>
    <string name="electrikjesus_devices">"Nexus 7 2012\nLG G2</string>
    <string name="nexus7_2012">"http://forum.xda-developers.com/nexus-7/development/rom-blisspop-teambliss-t3137240"</string>
    <string name="lg_g2">"http://forum.xda-developers.com/lg-g2/development/rom-team-bliss-t3290984"</string>

    <string name="blueyes">"http://forum.xda-developers.com/member.php?u=6207927"</string>
    <string name="blueyes_name">"blueyes"</string>
    <string name="blueyes_devices">"Nexus 7 2013"</string>
    <string name="nexus7_2013">"http://forum.xda-developers.com/nexus-7-2013/development/rom-blisspop-teambliss-v1-8-t3011252"</string>

    <string name="aclegg2011">"http://forum.xda-developers.com/member.php?u=3771760"</string>
    <string name="aclegg2011_name">"aclegg2011"</string>
    <string name="aclegg2011_devices">"LG G3"</string>
    <string name="lg_g3">"http://forum.xda-developers.com/lg-g3/development/rom-t3290333"</string>

    <string name="genesixxbf3">"http://forum.xda-developers.com/member.php?u=5776465"</string>
    <string name="genesixxbf3_name">"genesixxbf3"</string>
    <string name="genesixxbf3_devices">"LG G4"</string>
    <string name="lg_g4">"http://forum.xda-developers.com/g4/development/rom-blisspop-team-bliss-t3238437"</string>

    <string name="KeTuRr74">"http://forum.xda-developers.com/member.php?u=5305791"</string>
    <string name="KeTuRr74_name">"KeTuRr74"</string>
    <string name="KeTuRr74_devices">"Samsung Galaxy S4\nSamsung Galaxy Note II\nSamsung Galaxy Note 4"</string>
    <string name="s4">"http://forum.xda-developers.com/galaxy-s4/unified-development/rom-blisspop-v3-7-team-bliss-t3164334"</string>
    <string name="note2">"http://forum.xda-developers.com/galaxy-note-2/development/unofficial-blisspop-v3-5-n7100-t3137536"</string>
    <string name="note4">"http://forum.xda-developers.com/note-4/snapdragon-dev/official-blisspop-v4-0-3-t3230509"</string>

    <!-- All Supported Devices -->
    <string name="supported_device_title">"All supported devices"</string>
    <string name="apply_for_maintainer_title">"Don't see your device? Click here to apply to be an official maintainer!"</string>
    <string name="apply_for_maintainer">"https://docs.google.com/forms/d/1lofJAsGSgb6IFchFe8zq132a8GY80Pkvh48jtQ6B5OU/edit?usp=docslist_api"</string>

    <string name="asus_zenfone2">"ASUS Zenfone 2"</string>
    <string name="htc_one_m8">"HTC One M8"</string>
    <string name="lg_nexus_4">"Nexus 4"</string>
    <string name="lg_nexus_5">"Nexus 5"</string>
    <string name="moto_nexus_6">"Nexus 6"</string>
    <string name="asus_nexus_7_2012">"Nexus 7 (2012)"</string>
    <string name="asus_nexus_7_2013">"Nexus 7 (2013)"</string>
    <string name="lg_g2_name">"LG G2"</string>
    <string name="lg_g3_name">"LG G3"</string>
    <string name="lg_g4_name">"LG G4"</string>
    <string name="moto_x_pure">"Moto X Pure"</string>
    <string name="nvidia_shieldtab">"NVIDIA Shield Tab"</string>
    <string name="galaxy_s4">"Samsung Galaxy S4"</string>
    <string name="galaxy_note_2">"Samsung Galaxy Note II"</string>
    <string name="galaxy_note_4">"Samsung Galaxy Note 4"</string>
</resources>