<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/nicholas"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cards_margin"
                card_view:cardBackgroundColor="@color/cardsbg"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/cards_elevation">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cards_margin">

                    <ImageView
                        android:id="@+id/iconsbanner"
                        android:layout_width="fill_parent"
                        android:layout_height="250dp"
                        android:src="@drawable/nicholas" />

                    <LinearLayout
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iconsbanner"
                        android:layout_margin="@dimen/cards_text_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/welcometest"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:gravity="center"
                            android:text="@string/nicholas"
                            android:textColor="@color/card_title_text"
                            android:textSize="@dimen/text_big" />

                        <TextView
                            android:id="@+id/welcome_contenttest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@id/welcometest"
                            android:layout_marginBottom="@dimen/cards_text_margin"
                            android:layout_marginTop="@dimen/cards_text_margin"
                            android:gravity="center"
                            android:lineSpacingMultiplier="1.2"
                            android:text="@string/nicholas_description"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/text_small" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/description"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/web_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:background="?selectableItemBackground"
                            android:gravity="right"
                            android:padding="@dimen/cards_padding"
                            android:text="@string/web"
                            android:textColor="@color/accent"
                            android:textSize="@dimen/text_ultrasmall"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/gplus_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:background="?selectableItemBackground"
                            android:gravity="right"
                            android:padding="@dimen/cards_padding"
                            android:text="@string/gplus"
                            android:textColor="@color/accent"
                            android:textSize="@dimen/text_ultrasmall"
                            android:textStyle="bold" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/testers4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nicholas"
                android:layout_margin="@dimen/cards_margin"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                card_view:cardBackgroundColor="@color/cardsbg"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/cards_elevation">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cards_margin">

                    <LinearLayout
                        android:id="@+id/intro4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cards_text_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/intro_two4"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:gravity="center"
                            android:text="@string/title_libraries"
                            android:textColor="@color/card_title_text"
                            android:textSize="@dimen/text_big" />

                        <TextView
                            android:id="@+id/intro_three4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/cards_text_margin"
                            android:layout_marginTop="@dimen/cards_text_margin"
                            android:gravity="center"
                            android:lineSpacingMultiplier="1.2"
                            android:text="@string/list_of_implemeted_libraries"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/text_small" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/credits"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/testers4"
                android:layout_margin="@dimen/cards_margin"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                card_view:cardBackgroundColor="@color/cardsbg"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/cards_elevation">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cards_margin">

                    <LinearLayout
                        android:id="@+id/credit_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cards_text_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/credit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@id/welcometest"
                            android:layout_marginBottom="@dimen/cards_text_margin"
                            android:layout_marginTop="@dimen/cards_text_margin"
                            android:gravity="center"
                            android:lineSpacingMultiplier="1.2"
                            android:text="@string/license_credit"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/text_ultrasmall" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>